--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.77",
+    "@langchain/google-genai": "^0.2.18",
     "@types/sqlite3": "^3.1.11",
     "csv-parse": "^6.1.0",
     "next": "15.5.3",
