--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   "dependencies": {
     "@langchain/core": "^0.3.77",
     "@langchain/google-genai": "^0.2.18",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tabler/icons-react": "^3.35.0",
     "@types/sqlite3": "^3.1.11",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "csv-parse": "^6.1.0",
+    "lucide-react": "^0.544.0",
+    "motion": "^12.23.16",
     "next": "15.5.3",
     "openai": "^5.22.0",
     "pg": "^8.16.3",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -32,6 +40,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
 }
